testsuite/tests/parser/should_fail/pfail016.stderr
pfail016.alan:2:13: Error: Parse error on input `-'
	Array size must be a positive integer

